--- a/index.html
+++ b/index.html
@@ -46,14 +46,7 @@
             margin-right: 15px;
             cursor: pointer;
         }
-        /* 添加VIP标签样式 */
-        .vip {
-            background-color: #8e44ad;
-            color: #ffffff;
-            padding: 5px 10px;
-            border-radius: 5px;
-            margin-right: 15px;
-        }
+        
         /* 打字效果样式 */
         .text-container {
             max-width: 500px; /* 增加容器宽度 */
@@ -86,19 +79,6 @@
         @keyframes blink {
             50% { border-color: transparent; }
         }
-        /* 弹出窗口样式 */
-        .modal {
-            display: none; /* 初始隐藏 */
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.7); /* 半透明背景 */
-            justify-content: center;
-            align-items: center;
-            z-index: 1000;
-        }
         .modal-content {
             background-color: #2c2c2c;
             padding: 20px;
@@ -124,9 +104,8 @@
             <input type="text" placeholder="搜索文档">
             <span>指南</span>
             <span>参考</span>
-            <span class="vip" id="vipButton">VIP</span> <!-- 添加VIP标签并设置id -->
-            <button>切换主题</button>
-            <span>GitHub</span>
+            <button>切换语言</button>
+            <button onclick="window.location.href='https://github.com/akdisnicndjsoxm/blog.io'">GitHub</button>
         </div>
     </div>
 
@@ -136,17 +115,6 @@
         <h1 class="typing">欢迎来到 YizhenBlog</h1> <!-- 打字效果 -->
     </div>
 
-    <!-- 弹出窗口 -->
-    <div class="modal" id="vipModal">
-        <div class="modal-content">
-            <h2>开通 VIP</h2>
-            <p>请回答问题以开通 VIP</p>
-            <p>问题：你是什么时候开始接触编程的？</p>
-            <input type="text" id="answer" placeholder="输入答案">
-            <div class="close" id="closeModal">关闭</div>
-            <div class="yes" id ="yesButton">开通</div> <!-- 开通按钮 -->
-        </div>
-    </div>
 
     <script>
         window.addEventListener('load', function() {
@@ -162,18 +130,7 @@
             // 添加光标闪烁效果
             typingElement.classList.add('cursor-blink');
 
-            // 处理VIP按钮点击事件
-            const vipButton = document.getElementById('vipButton');
-            const vipModal = document.getElementById('vipModal');
-            const closeModal = document.getElementById('closeModal');
-
-            vipButton.addEventListener('click', function() {
-                vipModal.style.display = 'flex'; // 显示弹出窗口
-            });
-
-            closeModal.addEventListener('click', function() {
-                vipModal.style.display = 'none'; // 关闭弹出窗口
-            });
+            
         });
     </script>
 </body>
